--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a id="inicio" class="navbar-brand " >Home</a>
+                <a id="inicio" class="navbar-brand btn btn-darkline" >Home</a>
  
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     
@@ -28,10 +28,10 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a id="todo" class="dropdown-item" >Todos los productos</a></li>
+                                <li><a id="todo" class="dropdown-item btn btn-darkline" >Todos los productos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a id="fruta" class="dropdown-item" >Frutas</a></li>
-                                <li><a id="verdura"  class="dropdown-item" >Verduras</a></li>
+                                <li><a id="fruta" class="dropdown-item btn btn-darkline" >Frutas</a></li>
+                                <li><a id="verdura"  class="dropdown-item btn btn-darkline" >Verduras</a></li>
                             </ul>
                         </li>
                     </ul>
